<resources>
    <string name="app_name">SecondChance</string>
    <string name="title_home">Home</string>
    <string name="title_ai">AI Định giá</string>
    <string name="title_notifications">Notifications</string>
    <string name="second">SECOND</string>
    <string name="chance">CHANCE</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="forgotpassword">Quên mật khẩu?</string>
    <string name="redirect_register">Chưa có tài khoản? Đăng ký</string>
    <string name="redirect_login">Đã có tài khoản? Đăng nhập</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="repassword">Nhập lại mật khẩu</string>
    <string name="name">Tên</string>
    <string name="enter_otp_code">Nhập mã OTP</string>
    <string name="confirm">Xác nhận</string>
    <string name="Name_product">Tên sản phẩm</string>
    <string name="auctionTitle">Tiêu đề Đấu giá</string>
    <string name="receive_order">Đã nhận hàng</string>
    <string name="server_client_id">415494746009-gqefttglrkdkg2nopb93kornoeq28sut.apps.googleusercontent.com</string>
    <string name="default_web_client_id">415494746009-gqefttglrkdkg2nopb93kornoeq28sut.apps.googleusercontent.com</string>
    <string name="title_checkout">Checkout</string>

</resources>
