<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:paddingBottom="70dp"
    android:background="@color/whiteDay">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="331dp"
        android:layout_height="186dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/logo2chance" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhone"
        style="@style/Widget.SecondChance.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="@dimen/space_12"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/phone"
        app:hintTextAppearance="@style/TIL.Hint.Large">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhone"
            style="@style/Widget.SecondChance.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"
            android:textSize="@dimen/text_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.SecondChance.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPhone"
        android:layout_marginTop="@dimen/space_12"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:hintTextAppearance="@style/TIL.Hint.Large">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            style="@style/Widget.SecondChance.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/text_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgot"
        style="@style/Text.SecondChance.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/forgotpassword"
        android:textSize="@dimen/text_20" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.SecondChance.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/tvForgot"
        android:layout_marginTop="@dimen/space_12"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login"
        app:contentPaddingStart="@dimen/space_24"
        app:contentPaddingEnd="@dimen/space_24"
        android:textSize="@dimen/text_20"/>

    <TextView
        android:id="@+id/tvSignup"
        style="@style/Text.SecondChance.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/redirect_register"
        android:textSize="@dimen/text_20" />
</RelativeLayout>
