<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightDay">

    <ImageView
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/frame1000002455"
        android:elevation="0dp"/>

    <!-- Form đè lên wave -->
    <RelativeLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="40dp"
        android:background="@drawable/overlay_white_soft"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="331dp"
            android:layout_height="186dp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/logo2chance" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            style="@style/Widget.SecondChance.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_marginTop="@dimen/space_12"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/phone"
            app:hintTextAppearance="@style/TIL.Hint.Large">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhone"
                style="@style/Widget.SecondChance.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.SecondChance.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilPhone"
            android:layout_marginTop="@dimen/space_12"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:hintTextAppearance="@style/TIL.Hint.Large">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                style="@style/Widget.SecondChance.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot -->
        <TextView
            android:id="@+id/tvForgot"
            style="@style/Text.SecondChance.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_12"
            android:text="@string/forgotpassword"
            android:textSize="20sp" />

        <!-- Login button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Widget.SecondChance.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/tvForgot"
            android:layout_marginTop="@dimen/space_12"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login"
            app:contentPaddingStart="@dimen/space_24"
            app:contentPaddingEnd="@dimen/space_24"
            android:textSize="20sp"/>

        <!-- Sign up -->
        <TextView
            android:id="@+id/tvSignup"
            style="@style/Text.SecondChance.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_20"
            android:text="@string/register"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>
